add ul to index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/enchiladacasserole.html">Chicken Enchilada Recipe</a>
+    <ul><h1>Odin Recipes</h1></ul>
     
+       <li> <a href="recipes/enchiladacasserole.html">Chicken Enchilada Recipe</a></li>
+    <li><a href="recipes/slowcookerribs.html"> Slow Cooker Baby Back Ribs</a></li>
+    
+
 </body>
 </html>
