Add greenbeancasserole..html link to ul and add new recipe page

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <ul><h1>Odin Recipes</h1></ul>
+    <ul><h1>Odin Recipes</h1>
     
        <li> <a href="recipes/enchiladacasserole.html">Chicken Enchilada Recipe</a></li>
     <li><a href="recipes/slowcookerribs.html"> Slow Cooker Baby Back Ribs</a></li>
-    
+    <li> <a href="recipes/greenbeancasserole.html"> Green Bean casserole</a></li>
 
+
+</ul
 </body>
 </html>
